Different envs removed, docker config added

--- a/src/main/resources/default.conf
+++ b/src/main/resources/default.conf
@@ -13,5 +13,6 @@ akka {
 }
 
 wkhtmltopdf {
-  path = "/opt/bin/wkhtmltopdf"
+  path = "/usr/local/bin/wkhtmltopdf"
+  path = ${?WKHTMLTOPDF_PATH}
 }
